税の記述が重複しているため削除

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -21,7 +21,7 @@
     </div>
     <div class="item-price-box">
       <span class="item-price">
-       <span><%= @item.price %>円<br>(税込み)</span>
+       <span><%= @item.price %>円<br></span>
       </span>
       <span class="item-postage">
         (税込) 送料込み
