--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -35,7 +35,7 @@
  <% else %> 
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <% if user_signed_in? && @item.id.present? %>
-    <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
+    <%= link_to '購入画面に進む', item_orders_path(@item.id), class:"item-red-btn"%>
     <% end %>
  <% end %>
 
