--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -29,15 +29,17 @@
 
     
     <% if user_signed_in? && current_user.id == @item.user_id %>
-    <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %>
-    <p class='or-text'>or</p>
-    <%= link_to '削除', item_path, method: :delete, class:'item-destroy' %>   
- <% else %> 
+        <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %>
+        <p class='or-text'>or</p>
+        <%= link_to '削除', item_path, method: :delete, class:'item-destroy' %>   
+    <% else %> 
     
-    <% if user_signed_in? && @item.id.present? %>
-    <%= link_to '購入画面に進む', item_orders_path(@item.id), class:"item-red-btn"%>
-    <% end %>
- <% end %>
+        <% if @item.order.nil? %>
+        <% if user_signed_in? && @item.id.present? %>
+        <%= link_to '購入画面に進む', item_orders_path(@item.id), class:"item-red-btn"%>
+        <% end %>
+        <% end %>
+     <% end %>
 
     <div class="item-explain-box">
       <span><%= @item.text %></span>
