--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -85,9 +85,34 @@
   </div>
   <%# /商品の概要 %>
 
+
+
+
+
   <div class="comment-box">
     <form>
-      <textarea class="comment-text"></textarea>
+    <%= form_with uri: '/items/:item_id/messages' do |f| %>
+    <%= f.text_area :text, placeholder: "メッセージを送る", rows: "3" %>
+    <%= f.submit '送信' %>
+    <% end %>
+    <div id='messages'>
+    <% @messages.reverse_each do |message| %>
+    <p><%= message.text %></p>
+  <% end %>
+    </div>
+    <div class="comments">
+      <h4>＜コメント一覧＞</h4>
+  <% if @comments %>
+        <% @comments.each do |comment| %>
+          <p>
+            <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
+            <%= comment.text %>
+          </p>
+        <% end %>
+      <% end %>
+    </div>
+</div>
+      <%# <textarea class="comment-text"></textarea> #%>
       <p class="comment-warn">
         相手のことを考え丁寧なコメントを心がけましょう。
         <br>
