--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -15,7 +15,14 @@
         <span>Sold Out!!</span>
       </div>
       <% end %>
-     
+
+
+  
+      <% if @item.click_order.present? %> 
+      <div class='sold-out'>
+        <span>Sold Out!!</span>
+      </div>
+      <% end %>
 
     </div>
     <div class="item-price-box">
@@ -35,8 +42,11 @@
     <% else %> 
     
         <% if @item.order.nil? %>
+        <% if @item.order.present? %>
         <% if user_signed_in? && @item.id.present? %>
         <%= link_to '購入画面に進む', item_orders_path(@item.id), class:"item-red-btn"%>
+        <%= link_to 'ワンクリック購入する', order_item_path(@item.id), method: :post %>
+        <% end %>
         <% end %>
         <% end %>
      <% end %>
