--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -16,8 +16,6 @@
       </div>
       <% end %>
 
-
-  
       <% if @item.click_order.present? %> 
       <div class='sold-out'>
         <span>Sold Out!!</span>
@@ -38,11 +36,10 @@
     <% if user_signed_in? && current_user.id == @item.user_id %>
         <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %>
         <p class='or-text'>or</p>
-        <%= link_to '削除', item_path, method: :delete, class:'item-destroy' %>   
+        <%= link_to '削除', item_path, method: :delete, class:'item-destroy' %> 
     <% else %> 
-    
         <% if @item.order.nil? %>
-        <% if @item.order.present? %>
+        <% if @item.click_order.nil? %> 
         <% if user_signed_in? && @item.id.present? %>
         <%= link_to '購入画面に進む', item_orders_path(@item.id), class:"item-red-btn"%>
         <%= link_to 'ワンクリック購入する', order_item_path(@item.id), method: :post %>
@@ -50,6 +47,11 @@
         <% end %>
         <% end %>
      <% end %>
+     
+        
+        
+        
+
 
     <div class="item-explain-box">
       <span><%= @item.text %></span>
@@ -98,6 +100,7 @@
 
 
 <p>コメント一覧</p>
+
   <div id="comment-box">
    
       <div class="scroll">
