--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -207,14 +207,25 @@
 
 .scroll {
   overflow: scroll;
-  width: 70vw;
+  width: 100vw;
   height: 250px; 
   padding: 10vh 15vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .field {
-  
     width: 70vw;
     height: 20px;
     font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.message_box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
