--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -153,3 +153,21 @@
   text-align: right;
   cursor: pointer;
 }
+
+.sns_signin {
+  background-color: #f5f5f5;
+}
+.facebook-img {
+  margin:0 auto;
+  width: 12vw;
+  background-color: #f5f5f5;
+  display: flex;
+  
+}
+
+.google-img {
+  margin:0 auto;
+  width: 12vw;
+  background-color: #f5f5f5;
+  display: flex;
+} 
