--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -1,30 +1,58 @@
 <%= render "shared/header" %>
+
 <h1 class='transaction-title-text'>
       ワンクリック購入をする場合はカード情報の登録が必要です。
     </h1>
   <%= form_with model: @card, url: cards_path, id: 'charge-form', class: 'card-form',local: true do |f| %>
   <%= render 'shared/error_messages', model: f.object %>
- <div class="Cardpage">
-    <h1>カード登録</h1>
-  </div><br>
-  <div class='form-wrap'>
-    <%= f.label :number, "【カード番号】" %>
+
+<div class='transaction-contents'>
+  <div class='transaction-main'>
+  <div class='credit-card-form'>
+      <h1 class='info-input-haedline'>
+        クレジットカード情報入力
+      </h1>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <label class="form-text">カード情報</label>
+          <span class="indispensable">必須</span>
+        </div>
     <%= f.text_field :number, class:"number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
-  </div>
-  <div class='form-wrap'>
-    <%= f.label :cvc ,"【ＣＶＣ】" %>
-    <%= f.text_field :cvc, class:"cvc", placeholder:"カード背面にある3桁の番号", maxlength:"4" %>
-  </div>
-  <div class='form-wrap'>
-  <br>
-    <p>【有効期限】</p>
-    <div class='input-expiration-date-wrap'>
-      <%= f.select :exp_month, 1..12, {include_blank: "---"}, class: "exp_month" %>
+  <div class='available-card'>
+          <%= image_tag 'card-visa.gif', class: 'card-logo'%>
+          <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
+          <%= image_tag 'card-jcb.gif', class: 'card-logo'%>
+          <%= image_tag 'card-amex.gif', class: 'card-logo'%>
+        </div>
+      </div>
+
+   <div class="form-group">
+        <div class='form-text-wrap'>
+          <label class="form-text">有効期限</label>
+          <span class="indispensable">必須</span>
+        </div>
+        <div class='input-expiration-date-wrap'>
+      <%#= f.select :exp_month, 1..12, {include_blank: "---"}, class: "exp_month" %>
+      <%= f.text_area :exp_month, class: "exp_month", placeholder:"例)3" %>
       <p>月</p>
-      <%= f.select :exp_year, 20..25, {include_blank: "---"}, class: "exp_year" %>
+      <%#= f.select :exp_year, 20..25, {include_blank: "---"}, class: "exp_year" %>
+      <%= f.text_area :exp_year, class: "exp_year", placeholder:"例)23" %>
       <p>年</p>
+      </div>
     </div>
+
+<div class="form-group">
+        <div class='form-text-wrap'>
+          <label class="form-text">セキュリティコード</label>
+          <span class="indispensable">必須</span>
+        </div>
+ <%#= f.text_field :cvc, class:"cvc", placeholder:"カード背面にある3桁の番号", maxlength:"4" %>
+ <%= f.text_field :cvc ,class:"cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
+    </div>
+    </div>
+  <%= f.submit "登録する" , class:"buy-red-btn", 'data-disable-with' => false %>
   </div>
-  <%= f.submit "登録する" , class:"button", 'data-disable-with' => false %>
 <% end %>
+ </div>
+
 <%= render "shared/footer" %>
