処理後のページ挿入

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -55,7 +55,7 @@
           <% end %>
         <% end %>
       </li>
-      </ul>
-       <%= link_to "商品一覧へ戻る", root_path%>  
+      </ul>     
+      <b><%= link_to "トップページへ戻る", root_path%></b>
    </div>
 <%= render "shared/footer" %>
