--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -155,13 +155,19 @@
 }
 
 .sns_signin {
+  margin         : auto;                
+  box-sizing     : border-box;          
+  display: flex;          
+  justify-content: center;
+               
+  max-height     : 210px;   
   background-color: #f5f5f5;
 }
 .facebook-img {
   margin:0 auto;
   width: 12vw;
   background-color: #f5f5f5;
-  display: flex;
+  height: 3vw;
   
 }
 
@@ -169,5 +175,5 @@
   margin:0 auto;
   width: 12vw;
   background-color: #f5f5f5;
-  display: flex;
+  
 } 
